[package]
name = "rs-car-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-car = "0.4.1"
async-std = "1.12.0"
futures = "0.3.27"
quick-protobuf = { default-features = false, features = ["std"], version = "0.8" }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
hex = "0.4.3"
hex-literal = "0.3.4"

[build-dependencies]
cbindgen = "0.12"

[lib]
name = "rs_car_lib"
crate-type = ["staticlib"]

[profile.release]
lto = true
codegen-units = 1